--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -1,4 +1,45 @@
-.container  
-    background: red
+@import './variables'
     
+.container  
+    margin: 50px
+
+.title
+    font-size: 70px
+    text-align: center
+
+.search
+    background-color: yellow
+    width: min(400px, 80vw)
+    margin: 0 auto
+    padding: 10px
+    border-radius: 10px
+    display: flex
+    align-items: center
+    justify-content: space-between
+
+.searchBar 
+    background: none
+    border: none
+    &:focus
+        outline: none
+
+.icon
+    width: 20px
+    height: 20px
+
+.skewed 
+    position: absolute
+    top: 0
+    width: 100%
+    height: 30%
+    background: $primary
+    z-index: -1
+    transform: skewY(3deg)
+    transform-origin: top right
+    
+.wrapper
+    display: flex
+    align-content: center
+    justify-content: center
+    flex-wrap: wrap
 
