--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -1,2 +1,9 @@
-container 
-    background: yellow
+.container
+    flex: 1
+    width: 20%
+    height: 20vh  
+    background: green
+
+.poster
+    width: 100%
+    height: 80%
