--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -1,21 +1,29 @@
 @import './variables'
-    
+
 .container  
-    margin: 50px
+    padding: 4rem
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
 
 .title
-    font-size: 70px
+    font-size: 5rem
     text-align: center
-
+    color: $lightColor
+    background-clip: text
+    width: fit-content
+    
 .search
-    background-color: yellow
-    width: min(400px, 80vw)
+    background-color: white
+    width: min(500px, 80vw)
     margin: 0 auto
     padding: 10px
-    border-radius: 10px
+    border-radius: 20px
     display: flex
     align-items: center
     justify-content: space-between
+    box-shadow: 0 0 5px #ffffff
 
 .searchBar 
     background: none
@@ -26,15 +34,16 @@
 .icon
     width: 20px
     height: 20px
+    opacity: 0.5
 
 .skewed 
     position: absolute
     top: 0
     width: 100%
-    height: 30%
-    background: $primary
+    height: 49%
+    background: $darkColor
     z-index: -1
-    transform: skewY(3deg)
+    transform: skewY(2deg)
     transform-origin: top right
     
 .wrapper
@@ -43,3 +52,7 @@
     justify-content: center
     flex-wrap: wrap
 
+.noResults
+    text-align: center
+    color: $darkColor
+    font-size: 1.5rem
