--- a/src/styles/Index.sass
+++ b/src/styles/Index.sass
@@ -1,3 +1,5 @@
+@import './variables'
+  
 body
   margin: 0
   padding: 0
@@ -5,7 +7,15 @@ body
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+  background-color: $lightColor
+  background-image: url('../images/background.png')
+  background-repeat: repeat
 
+h1, h2 
+  font-family: $serifFont
+
+h3, h4, p
+  font-family: $sansSerifFont
 
 code 
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
