--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -1,9 +1,16 @@
+@import './variables'
+    
 .container
-    flex: 1
-    width: 20%
-    height: 20vh  
-    background: green
+    padding: 1rem
+    width: min(310px, 80vw) 
+    height: 460px 
+    background: $primaryColor
+    border-radius: 20px
+    margin: 1.5rem
+    overflow: hidden
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1)
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1)
 
 .poster
     width: 100%
-    height: 80%
+    height: 230px
