--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,1 +1,8 @@
-$primary: #953153
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700")
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i")
+
+$serifFont: "Roboto Slab", serif
+$sansSerifFont: "Raleway", sans-serif
+$primaryColor: #EB8921
+$darkColor: #6B3F0F
+$lightColor: #EEAE69
