--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -1,7 +1,6 @@
 @import './variables'
 
 .container  
-    padding: 4rem
     display: flex
     justify-content: center
     align-items: center
@@ -16,7 +15,7 @@
     
 .search
     background-color: white
-    width: min(500px, 80vw)
+    width: min(500px, 90vw)
     margin: 0 auto
     padding: 10px
     border-radius: 20px
@@ -47,12 +46,16 @@
     transform-origin: top right
     
 .wrapper
+    padding-top: 5rem
+    padding-bottom: 5rem
     display: flex
     align-content: center
     justify-content: center
     flex-wrap: wrap
 
 .noResults
+    padding-top: 5rem
     text-align: center
     color: $darkColor
     font-size: 1.5rem
+
