--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -1,9 +1,11 @@
 @import './variables'
     
 .container
-    padding: 1rem
-    width: min(310px, 80vw) 
-    height: 460px 
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+    width: min(300px, 90vw) 
+    height: 450px 
     background: $primaryColor
     border-radius: 20px
     margin: 1.5rem
@@ -12,5 +14,10 @@
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1)
 
 .poster
-    width: 100%
-    height: 230px
+    width: min(300px, 90vw)
+    height: 300px
+    overflow: hidden
+    border-radius-top: 20px
+
+.info
+    padding: 1.5rem
