--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -3,6 +3,6 @@
 
 $serifFont: "Roboto Slab", serif
 $sansSerifFont: "Raleway", sans-serif
-$primaryColor: #EB8921
-$darkColor: #6B3F0F
-$lightColor: #EEAE69
+$primaryColor: #FFA442
+$darkColor: #805221
+$lightColor: #FFC98F
