--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -9,13 +9,13 @@
 .title
     font-size: 5rem
     text-align: center
-    color: $lightColor
+    color: $primaryColor
     background-clip: text
     width: fit-content
     
 .search
     background-color: white
-    width: min(500px, 90vw)
+    width: min(500px, 80vw)
     margin: 0 auto
     padding: 10px
     border-radius: 20px
@@ -23,8 +23,11 @@
     align-items: center
     justify-content: space-between
     box-shadow: 0 0 5px #ffffff
+    background-color: white
 
 .searchBar 
+    flex: 2
+    background-color:  white
     background: none
     border: none
     &:focus
@@ -39,7 +42,7 @@
     position: absolute
     top: 0
     width: 100%
-    height: 49%
+    height: 50%
     background: $darkColor
     z-index: -1
     transform: skewY(2deg)
