--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -2,22 +2,32 @@
     
 .container
     display: flex
+    align-content: center
+    justify-content: center
     flex-direction: column
-    justify-content: space-around
-    width: min(300px, 90vw) 
-    height: 450px 
-    background: $primaryColor
+    width: min(300px, 80vw) 
+    height: 400px 
+    background: $darkColor
+    color: $primaryColor
     border-radius: 20px
     margin: 1.5rem
     overflow: hidden
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1)
-    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1)
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
+    &:hover
+        background: $primaryColor
+        color: $darkColor
 
 .poster
-    width: min(300px, 90vw)
-    height: 300px
+    width: 100%
+    height: 70%
     overflow: hidden
     border-radius-top: 20px
 
 .info
-    padding: 1.5rem
+    padding: 20px
+    p, h4
+        margin: 0px 0px 5px 0px
+    h3
+        margin-top: 0
+        font-family: $serifFont
