--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -48,7 +48,7 @@
     transform: skewY(2deg)
     transform-origin: top right
     
-.wrapper
+.cardWrapper
     padding-top: 5rem
     padding-bottom: 5rem
     display: flex
