--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -1,6 +1,7 @@
 @import './variables'
     
 .container
+    cursor: pointer
     display: flex
     align-content: center
     justify-content: center
