--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -36,17 +36,25 @@
 .icon
     width: 20px
     height: 20px
-    opacity: 0.5
+    opacity: 0.3
 
 .skewed 
     position: absolute
     top: 0
     width: 100%
     height: 50%
-    background: $darkColor
+    background-color: $darkColor
     z-index: -1
     transform: skewY(2deg)
     transform-origin: top right
+
+.pageWrapper
+    padding-top: 5rem
+    padding-bottom: 5rem
+    display: flex
+    align-content: center
+    justify-content: center
+    flex-wrap: wrap
     
 .cardWrapper
     padding-top: 5rem
