--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -8,6 +8,7 @@
 
 .title
     font-size: 5rem
+    margin-bottom: 2rem
     text-align: center
     color: $primaryColor
     background-clip: text
@@ -42,30 +43,38 @@
     position: absolute
     top: 0
     width: 100%
-    height: 50%
+    height: 47%
     background-color: $darkColor
     z-index: -1
-    transform: skewY(2deg)
+    transform: skewY(1deg)
     transform-origin: top right
 
 .pageWrapper
-    padding-top: 5rem
-    padding-bottom: 5rem
-    display: flex
+    padding-top: 7rem
+    padding-bottom: 4rem
+    display: flex    
     align-content: center
     justify-content: center
     flex-wrap: wrap
     
 .cardWrapper
-    padding-top: 5rem
-    padding-bottom: 5rem
+    padding-top: 7rem
+    padding-bottom: 4rem
     display: flex
     align-content: center
     justify-content: center
     flex-wrap: wrap
 
 .noResults
-    padding-top: 5rem
+    padding-top: 7rem
     text-align: center
     color: $darkColor
     font-size: 1.5rem
+
+@media only screen and (max-width: 600px) 
+
+    .pageWrapper, .cardWrapper, .noResults
+        padding-top: 3rem
+
+    .title
+        margin-top: 2rem
