--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -5,7 +5,7 @@
     align-content: center
     justify-content: center
     width: min(800px, 80vw)
-    height: 400px 
+    height: 430px 
     background: $darkColor
     color: $primaryColor
     border-radius: 20px
@@ -30,4 +30,18 @@
         font-family: $serifFont
 
 .backButton
+    margin-top: 20px
     cursor: pointer
+    width: 50%
+    padding: 10px
+    border-radius: 20px
+
+@media only screen and (max-width: 600px)
+
+    .container
+        flex-direction: column
+        height: auto
+    
+    .poster
+        width: min(800px, 80vw)
+        
