--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -71,10 +71,10 @@
     color: $darkColor
     font-size: 1.5rem
 
-@media only screen and (max-width: 600px) 
+@media only screen and (max-width: 623px) 
 
-    .pageWrapper, .cardWrapper, .noResults
-        padding-top: 3rem
+    .skewed
+        height: 60%
 
     .title
         margin-top: 2rem
