--- a/src/styles/Index.sass
+++ b/src/styles/Index.sass
@@ -17,6 +17,12 @@ h1, h2
 h3, h4, p
   font-family: $sansSerifFont
 
+h2
+  margin-top: 0px
+
+h4
+  margin-bottom: 20px 
+
 code 
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
 
