--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -6,7 +6,7 @@
     align-content: center
     justify-content: center
     flex-direction: column
-    width: min(300px, 80vw) 
+    width: min(300px, 65vw) 
     height: 430px 
     background: $darkColor
     color: $primaryColor
@@ -26,6 +26,10 @@
     border-radius-top: 20px
 
 .info
+    display: flex
+    justify-content: space-between
+    flex-direction: column
+    height: 120px
     padding: 20px
     p, h4
         margin: 0px 0px 5px 0px
