--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -4,8 +4,8 @@
     display: flex
     align-content: center
     justify-content: center
-    width: min(800px, 80vw)
-    height: 430px 
+    width: min(700px, 65vw)
+    height: 400px 
     background: $darkColor
     color: $primaryColor
     border-radius: 20px
@@ -19,7 +19,7 @@
 .info
     margin: 1rem
     display: flex
-    justify-content: center
+    justify-content: space-between
     align-content: start
     flex-direction: column
     padding: 20px
@@ -32,16 +32,23 @@
 .backButton
     margin-top: 20px
     cursor: pointer
-    width: 50%
+    width: auto
     padding: 10px
     border-radius: 20px
+    background: $primaryColor
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
+    border: none
+    &:hover
+        background: $lightColor
+    &:active
+        box-shadow: none
+
+    
 
 @media only screen and (max-width: 600px)
 
     .container
         flex-direction: column
         height: auto
-    
-    .poster
-        width: min(800px, 80vw)
+
         
