--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -6,7 +6,7 @@
     align-content: center
     justify-content: center
     flex-direction: column
-    width: min(300px, 65vw) 
+    width: 300px 
     height: 430px 
     background: $darkColor
     color: $primaryColor
@@ -15,9 +15,12 @@
     overflow: hidden
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1)
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
+    transition: 0.8s ease-out
     &:hover
+        box-shadow: 0px 15px 12px -5px rgba(0, 0, 0, 0.5)
         background: $primaryColor
         color: $darkColor
+        transform: scale(1.01)
 
 .poster
     width: 100%
@@ -29,10 +32,11 @@
     display: flex
     justify-content: space-between
     flex-direction: column
-    height: 120px
-    padding: 20px
-    p, h4
-        margin: 0px 0px 5px 0px
+    height: min(100px, 50%)
+    padding: 20px 
+    h2
+        -webkit-line-clamp: 2
     h3
-        margin-top: 0
+        color: $accentColor
         font-family: $serifFont
+        margin: 0px 0px 5px 0px
