--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700")
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap')
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i")
 
-$serifFont: "Roboto Slab", serif
-$sansSerifFont: "Raleway", sans-serif
-$primaryColor: #FFA442
-$darkColor: #805221
-$lightColor: #FFC98F
+$serifFont: 'Audiowide', cursive
+$sansSerifFont: 'Raleway', sans-serif
+$primaryColor:#e7e7e7
+$darkColor: #611427
+$accentColor: #ff8400
+$backgroundColor: linear-gradient(135deg, rgba(149,137,118,1) 0%, rgba(106,106,97,1) 50%, rgba(29,35,38,1) 100%)
