--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -37,15 +37,16 @@
     margin-top: 20px
     font-size: 1rem
     cursor: pointer
-    width: 75%
+    width: 70%
     padding: 10px
     border-radius: 20px
     background: $accentColor
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
+    transition: 0.8s ease-out
     border: none
-    transition: 1s
     &:hover
         background: $primaryColor
+        box-shadow: 0px 15px 12px -5px rgba(0, 0, 0, 0.5)
     &:active
         box-shadow: none
 
