--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -43,7 +43,7 @@
     position: absolute
     top: 0
     width: 100%
-    height: 43%
+    height: 310px
     background-color: $darkColor
     z-index: -1
     transform: skewY(1deg)
@@ -75,8 +75,7 @@
     h2
         font-size: 1.8rem
 
-
-@media only screen and (max-width: 723px) 
+@media only screen and (max-width: 720px)
 
     .title
         font-size: 4rem
@@ -86,7 +85,12 @@
         padding-top: 7rem
 
     .skewed
-        height: 47%
+        height: 250px
 
     .noResults
         padding-top: 3rem
+
+@media only screen and (max-width: 580px) 
+
+    .skewed
+        height: 333px
