--- a/src/styles/Index.module.sass
+++ b/src/styles/Index.module.sass
@@ -11,6 +11,7 @@ body
 
 h1, h2, h3
   font-family: $serifFont
+  text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2)
 
 h4, p, button
   font-family: $sansSerifFont
