--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -20,6 +20,8 @@
         background: $primaryColor
         color: $darkColor
         transform: scale(1.01)
+        h2, h3
+            text-shadow: 0px 0px 0px
 
 .poster
     width: 100%
