--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -8,13 +8,14 @@
     height: 400px 
     background: $darkColor
     color: $primaryColor
-    border-radius: 20px
+    border-radius: 10px
     margin: 1.5rem
     overflow: hidden
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
 
 .poster
     background-color: $darkColor
+    display: flex
 
 
 .info
@@ -39,7 +40,7 @@
     cursor: pointer
     width: 70%
     padding: 10px
-    border-radius: 20px
+    border-radius: 10px
     background: $accentColor
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
     transition: 0.8s ease-out
