--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -16,6 +16,10 @@
 .poster
     background-color: $darkColor
     display: flex
+    padding: 30px
+
+.poster img
+    border-radius: 10px
 
 
 .info
@@ -24,7 +28,7 @@
     justify-content: space-between
     align-content: start
     flex-direction: column
-    padding: 20px
+    padding: 15px
     h3
         color: $accentColor
         margin-top: 0
@@ -59,6 +63,12 @@
         width: 300px
         flex-direction: column
         height: auto
+
+    .poster
+        padding: 0px
+    
+    .poster img
+        border-radius: 0px
 
     .backButton
         width: 100%
