--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -69,3 +69,9 @@
 
     .backButton
         width: 100%
+
+    .info
+        h2
+            -webkit-line-clamp: 10
+        p
+            -webkit-line-clamp: 20
