--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -5,11 +5,10 @@
     align-content: center
     justify-content: center
     width: 700px
-    height: 400px 
+    height: auto 
     background: $darkColor
     color: $primaryColor
     border-radius: 10px
-    margin: 1.5rem
     overflow: hidden
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
 
@@ -24,7 +23,7 @@
 .info
     margin: 1rem
     display: flex
-    justify-content: space-between
+    justify-content: center
     align-content: start
     flex-direction: column
     padding: 15px
@@ -35,7 +34,7 @@
     h2
         -webkit-line-clamp: 3
     p
-        -webkit-line-clamp: 4
+        -webkit-line-clamp: 10
 
 .backButton
     margin-top: 20px
