--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -9,6 +9,7 @@
     background: $darkColor
     color: $primaryColor
     border-radius: 10px
+    margin: 1.5rem
     overflow: hidden
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
 
