--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -24,7 +24,7 @@
 .info
     margin: 1rem
     display: flex
-    justify-content: center
+    justify-content: start
     align-content: start
     flex-direction: column
     padding: 15px
