--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -41,3 +41,9 @@
         color: $accentColor
         font-family: $serifFont
         margin: 0px 0px 5px 0px
+
+.button 
+    width: 100%
+    height: auto
+    
+
