--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -13,8 +13,15 @@
     color: $accentColor
     background-clip: text
     width: fit-content
+
+.searchAndToggle
+    display: flex
+    justify-content: center
+    align-content: center
+    gap: 30px
     
 .search
+    flex: 3
     background-color: white
     width: min(500px, 80vw)
     margin: 0 auto
@@ -38,6 +45,20 @@
     width: 20px
     height: 20px
     opacity: 0.3
+
+.toggleFavoritesBtn
+    border-radius: 10px
+    flex: 1
+    background: none
+    border: 1px solid white
+    color: white
+
+.toggleFavoritesBtnActive
+    border-radius: 10px
+    flex: 1
+    background: white
+    border: none
+    color: black
 
 .skewed 
     position: absolute
