--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -13,6 +13,7 @@
     color: $accentColor
     background-clip: text
     width: fit-content
+    cursor: pointer
 
 .searchAndToggle
     display: flex
