--- a/src/styles/Index.module.sass
+++ b/src/styles/Index.module.sass
@@ -9,6 +9,7 @@ body
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
     background: $backgroundColor
+    background-attachment: fixed
 
 h1, h2, h3
     font-family: $serifFont
