--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -20,11 +20,12 @@
     justify-content: center
     align-content: center
     gap: 30px
+    flex-wrap: wrap
     
 .search
     flex: 3
     background-color: white
-    width: min(500px, 80vw)
+    width: min(450px, 80vw)
     margin: 0 auto
     padding: 10px
     border-radius: 10px
@@ -46,20 +47,6 @@
     width: 20px
     height: 20px
     opacity: 0.3
-
-.toggleFavoritesBtn
-    border-radius: 10px
-    flex: 1
-    background: none
-    border: 1px solid white
-    color: white
-
-.toggleFavoritesBtnActive
-    border-radius: 10px
-    flex: 1
-    background: white
-    border: none
-    color: black
 
 .skewed 
     position: absolute
@@ -110,6 +97,8 @@
 
     .noResults
         padding-top: 3rem
+
+    .search, .toggleFavoritesBtn, .toggleFavoritesBtnActive 
 
 @media only screen and (max-width: 580px) 
 
