--- a/src/styles/ToggleButton.module.sass
+++ b/src/styles/ToggleButton.module.sass
@@ -1,6 +1,6 @@
 @import './variables'
     
-.toggleFavoritesBtn
+.button
     display: flex
     justify-content: space-evenly
     align-content: center
@@ -13,8 +13,9 @@
     color: white
     cursor: pointer
     fill: white
+    font-weight: bold
 
-.toggleFavoritesBtnActive
+.buttonActive
     display: flex
     justify-content: space-evenly
     align-content: center
@@ -24,14 +25,14 @@
     width: min(150px, 50vw)
     background: white
     border: 2px solid $accentColor
-    color: black
+    color: $accentColor
     cursor: pointer
     fill: $accentColor
     font-weight: bold
     
 
-.star
+.buttonIcon
     align-self: center
     margin-top: 2.5px
-    width: 25px
-    height: 25px
+    width: 23px
+    height: 23px
