--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -21,32 +21,6 @@
     align-content: center
     gap: 30px
     flex-wrap: wrap
-    
-.search
-    flex: 3
-    background-color: white
-    width: min(450px, 80vw)
-    margin: 0 auto
-    padding: 10px
-    border-radius: 10px
-    display: flex
-    align-items: center
-    justify-content: space-between
-    box-shadow: 0 0 5px #ffffff
-    background-color: white
-
-.searchBar 
-    flex: 2
-    background-color:  white
-    background: none
-    border: none
-    &:focus
-        outline: none
-
-.icon
-    width: 20px
-    height: 20px
-    opacity: 0.3
 
 .skewed 
     position: absolute
@@ -57,16 +31,8 @@
     z-index: -1
     transform: skewY(1deg)
     transform-origin: top right
-
-.pageWrapper
-    padding-top: 7.7rem
-    padding-bottom: 2.3rem
-    display: flex    
-    align-content: center
-    justify-content: center
-    flex-wrap: wrap
     
-.cardWrapper
+.wrapper
     padding-top: 7.7rem
     padding-bottom: 2.3rem
     display: flex
@@ -97,8 +63,6 @@
 
     .noResults
         padding-top: 3rem
-
-    .search, .toggleFavoritesBtn, .toggleFavoritesBtnActive 
 
 @media only screen and (max-width: 580px) 
 
