--- a/src/styles/SearchBar.module.sass
+++ b/src/styles/SearchBar.module.sass
@@ -25,3 +25,8 @@
     width: 20px
     height: 20px
     opacity: 0.3
+
+@media only screen and (max-width: 720px)
+
+    .search
+        flex: 0 1 auto
