--- a/src/styles/ToggleButton.module.sass
+++ b/src/styles/ToggleButton.module.sass
@@ -2,12 +2,10 @@
     
 .button
     display: flex
-    justify-content: space-evenly
+    justify-content: space-around
     align-content: center
-    gap: 5px
     border-radius: 10px
     flex: 1
-    width: min(150px, 50vw)
     background: none
     border: 2px solid white
     color: white
@@ -17,22 +15,27 @@
 
 .buttonActive
     display: flex
-    justify-content: space-evenly
+    justify-content: space-around
     align-content: center
-    gap: 5px
     border-radius: 10px
     flex: 1
-    width: min(150px, 50vw)
     background: white
     border: 2px solid $accentColor
     color: $accentColor
     cursor: pointer
     fill: $accentColor
     font-weight: bold
-    
+
+.button p, .buttonActive p 
+    padding: 0 5px
 
 .buttonIcon
     align-self: center
     margin-top: 2.5px
     width: 23px
     height: 23px
+
+@media only screen and (max-width: 720px)
+
+    .button, .buttonActive
+        flex: 0 1 auto
