--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -14,58 +14,66 @@
     background-clip: text
     width: fit-content
     cursor: pointer
+    padding: 0px 25px
 
 .searchAndToggle
-    display: inline-flex
+    display: flex
     justify-content: space-around
     align-content: center
-    gap: 30px
+    gap: 25px
     flex-wrap: wrap
+    padding: 0px 25px
 
 .skewed 
     position: absolute
     top: 0
     width: 100%
-    height: 310px
+    height: 315px
     background-color: $darkColor
     z-index: -1
     transform: skewY(1deg)
     transform-origin: top right
     
 .wrapper
-    padding-top: 7.7rem
-    padding-bottom: 2.3rem
+    padding-top: 7rem
+    padding-bottom: 2.5rem
     display: flex
     align-content: center
     justify-content: center
     flex-wrap: wrap
 
 .noResults
-    padding-top: 5rem
-    padding-bottom: 3rem
+    padding: 5rem 25px 3.3rem 25px
     background-color: $darkColor
     text-align: center
     color: $accentColor
     h2
         font-size: 1.8rem
 
-@media only screen and (max-width: 720px)
+@media only screen and (max-width: 754px)
 
     .title
         font-size: 4rem
         margin-top: 2rem
+        line-height: 4rem
 
     .wrapper
         padding-top: 4rem
+        padding-bottom: 1.5rem
 
     .skewed
-        height: 300px
+        height: 220px
 
     .noResults
         padding-top: 2rem
         padding-bottom: 1rem
 
-@media only screen and (max-width: 580px) 
+@media only screen and (max-width: 699px) 
 
     .skewed
-        height: 380px
+        height: 275px
+
+@media only screen and (max-width: 613px) 
+
+    .skewed
+        height: 340px
