--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -11,7 +11,7 @@
     background: $darkColor
     color: $primaryColor
     border-radius: 10px
-    margin: 1.5rem
+    margin: 1.2rem
     overflow: hidden
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
     transition: 0.8s ease-out
@@ -47,3 +47,7 @@
     height: auto
     
 
+@media only screen and (max-width: 754px)
+
+    .container
+        margin: 1rem
