--- a/src/styles/ToggleButton.module.sass
+++ b/src/styles/ToggleButton.module.sass
@@ -2,38 +2,46 @@
     
 .button
     display: flex
-    justify-content: space-around
+    justify-content: center
     align-content: center
+    gap: 5px
     border-radius: 10px
-    flex: 1
+    padding: 0px 10px
     background: none
     border: 2px solid white
     color: white
     cursor: pointer
     fill: white
     font-weight: bold
+    transition: 0.8s ease
+    &:hover
+        border: 2px solid $accentColor
+        fill: $accentColor
+        color: $accentColor
 
 .buttonActive
     display: flex
-    justify-content: space-around
+    justify-content: center
     align-content: center
+    gap: 5px
     border-radius: 10px
-    flex: 1
+    padding: 0px 10px
     background: white
     border: 2px solid $accentColor
     color: $accentColor
     cursor: pointer
     fill: $accentColor
     font-weight: bold
-
-.button p, .buttonActive p 
-    padding: 0 5px
+    transition: 0.8s ease
+    &:hover
+        box-shadow: 0px 15px 12px -5px rgba(0, 0, 0, 0.5)
+         
 
 .buttonIcon
     align-self: center
-    margin-top: 2.5px
-    width: 23px
-    height: 23px
+    margin-top: 1.5px
+    width: 20px
+    height: 20px
 
 @media only screen and (max-width: 720px)
 
