--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -25,7 +25,7 @@
 
 .poster
     width: 100%
-    height: 68%
+    height: 90%
     overflow: hidden
     border-radius-top: 10px
 
@@ -37,10 +37,12 @@
     padding: 20px 
     h2
         -webkit-line-clamp: 2
+        font-size: 1.1rem
     h3
         color: $accentColor
         font-family: $serifFont
         margin: 0px 0px 5px 0px
+        font-size: 0.85rem
 
 .button 
     width: 100%
