--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -4,19 +4,19 @@
     display: flex
     align-content: center
     justify-content: center
-    width: 800px
+    width: 900px
     height: auto 
     background: $darkColor
     color: $primaryColor
     border-radius: 10px
-    margin: 1.5rem
+    margin: 1.2rem
     overflow: hidden
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
 
 .poster
     background-color: $darkColor
     display: flex
-    padding: 20px
+    padding: 20px 20px 20px 0
 
 .poster img
     border-radius: 10px
@@ -27,17 +27,51 @@
     justify-content: start
     align-content: start
     flex-direction: column
-    padding: 15px
+    padding: 10px
+    h4
+        margin: 0 0 1rem 0
     h3
         color: $accentColor
         margin-top: 0
         font-family: $serifFont
+        margin-bottom: 0
     h2
         -webkit-line-clamp: 3
     p
         -webkit-line-clamp: 10
+    em
+        color: $accentColor
 
-.backButton
+.plot
+    padding: 10px
+    background: white
+    color: black
+    opacity: 0.8
+    border-radius: 10px
+    p
+        -webkit-line-clamp: 1
+        opacity: 1
+        margin: 0
+    h5
+        padding-top: 5px
+        opacity: 0.7
+        margin: 0
+        color: blue
+        &:hover
+            text-decoration: underline
+            cursor: pointer
+
+.extraClamp 
+    -webkit-line-clamp: 1000 !important
+    
+.buttons
+    display: flex
+    justify-content: center
+    align-content: center
+    gap: 25px
+    flex-wrap: no-wrap
+
+.button
     margin-top: 20px
     font-size: 1rem
     cursor: pointer
@@ -57,21 +91,31 @@
 @media only screen and (max-width: 860px)
 
     .container
-        width: 300px
         flex-direction: column
         height: auto
 
     .poster
-        padding: 0px
+        padding: 0 20px 20px
     
     .poster img
-        border-radius: 0px
+        border-radius: 10px
 
-    .backButton
+    .buttons
+        gap: 0
+        flex-wrap: wrap
+        margin-bottom: 20px
+
+    .button
         width: 100%
 
     .info
+        margin-bottom: 0
+        padding: 0
         h2
             -webkit-line-clamp: 10
         p
             -webkit-line-clamp: 20
+
+    .plot
+        p
+            -webkit-line-clamp: 1
