--- a/src/styles/MovieCard.module.sass
+++ b/src/styles/MovieCard.module.sass
@@ -33,7 +33,6 @@
     display: flex
     justify-content: space-between
     flex-direction: column
-    width: 100%
     height: min(100px, 50%)
     padding: 20px 
     h2
@@ -46,11 +45,10 @@
         margin: 0px 0px 5px 0px
         font-size: 0.85rem
 
-.iconActive, .iconInactive 
-    height: 30px
-    width: 20%
+.icon
+    height: 20px
+    width: 20px
     fill: $accentColor
-    
 
 @media only screen and (max-width: 754px)
 
