--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -22,12 +22,11 @@
     border-radius: 10px
 
 .info
-    margin: 1rem
     display: flex
     justify-content: start
     align-content: start
     flex-direction: column
-    padding: 10px
+    padding: 20px
     h4
         margin: 0 0 1rem 0
     h3
@@ -110,7 +109,7 @@
 
     .info
         margin-bottom: 0
-        padding: 0
+        padding: 20px 20px 0
         h2
             -webkit-line-clamp: 10
         p
