--- a/src/styles/SearchBar.module.sass
+++ b/src/styles/SearchBar.module.sass
@@ -4,17 +4,17 @@
     display: flex
     align-items: center
     justify-content: space-between
-    background-color: white
+    background-color: $primaryColor
     width: min(450px, 80vw)
     margin: 0 auto
     padding: 10px
     border-radius: 10px
     box-shadow: 0 0 5px #ffffff
-    background-color: white
+    background-color: $primaryColor
 
 .searchInput 
     flex: 2
-    background-color:  white
+    background-color:  $primaryColor
     background: none
     border: none
     &:focus
