--- a/src/styles/ToggleButton.module.sass
+++ b/src/styles/ToggleButton.module.sass
@@ -8,10 +8,10 @@
     border-radius: 10px
     padding: 0px 10px
     background: none
-    border: 2px solid white
-    color: white
+    border: 2px solid $primaryColor
+    color: $primaryColor
     cursor: pointer
-    fill: white
+    fill: $primaryColor
     font-weight: bold
     transition: 0.8s ease
     &:hover
@@ -26,9 +26,9 @@
     gap: 5px
     border-radius: 10px
     padding: 0px 10px
-    background: white
+    background: $primaryColor
     border: 2px solid $accentColor
-    color: $accentColor
+    color: $darkColor
     cursor: pointer
     fill: $accentColor
     font-weight: bold
