--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -14,16 +14,21 @@
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.3)
 
 .poster
-    background-color: $darkColor
     display: flex
+    justify-content: flex-start
+    align-content: flex-start
+    background-color: $darkColor
     padding: 20px 20px 20px 0
+    
 
 .poster img
+    align-self: flex-start
+    object-fit: none
     border-radius: 10px
 
 .info
     display: flex
-    justify-content: start
+    justify-content: space-between
     align-content: start
     flex-direction: column
     padding: 20px
@@ -36,6 +41,8 @@
         margin-bottom: 0
     h2
         -webkit-line-clamp: 3
+        font-size: 2rem
+        margin-bottom: 1rem 
     p
         -webkit-line-clamp: 10
     em
@@ -43,12 +50,12 @@
 
 .plot
     padding: 10px
-    background: white
+    background: $primaryColor
     color: black
     opacity: 0.8
     border-radius: 10px
     p
-        -webkit-line-clamp: 1
+        -webkit-line-clamp: 2
         opacity: 1
         margin: 0
     h5
@@ -64,17 +71,20 @@
     -webkit-line-clamp: 1000 !important
     
 .buttons
+    margin-top: 0
+    display: flex
+    justify-content: start
+    align-content: center
+    gap: 20px
+    flex-wrap: no-wrap
+
+.button, .buttonActive, .buttonInactive
     display: flex
     justify-content: center
     align-content: center
-    gap: 25px
-    flex-wrap: no-wrap
-
-.button
-    margin-top: 20px
+    gap: 7px
     font-size: 1rem
     cursor: pointer
-    width: 70%
     padding: 10px
     border-radius: 10px
     background: $accentColor
@@ -86,6 +96,12 @@
         box-shadow: 0px 15px 12px -5px rgba(0, 0, 0, 0.5)
     &:active
         box-shadow: none
+
+.icon
+    align-self: center
+    width: 15px
+    height: 15px
+    fill: black
 
 @media only screen and (max-width: 860px)
 
@@ -104,8 +120,8 @@
         flex-wrap: wrap
         margin-bottom: 20px
 
-    .button
-        width: 100%
+    .buttonActive, .buttonInactive
+        margin-top: 20px
 
     .info
         margin-bottom: 0
