--- a/src/styles/Index.module.sass
+++ b/src/styles/Index.module.sass
@@ -11,7 +11,7 @@ body
     background: $backgroundColor
     background-attachment: fixed
 
-h1, h2, h3
+h1, h2, h3, svg
     font-family: $serifFont
     text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2)
 
