--- a/src/styles/MoviePage.module.sass
+++ b/src/styles/MoviePage.module.sass
@@ -28,7 +28,7 @@
 .info
     display: flex
     justify-content: space-between
-    align-content: start
+    align-content: flex-start
     flex-direction: column
     padding: 20px
     h4
@@ -72,7 +72,7 @@
 .buttons
     margin-top: 0
     display: flex
-    justify-content: start
+    justify-content: flex-start
     align-content: center
     gap: 20px
     flex-wrap: no-wrap
