--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -42,6 +42,39 @@
     justify-content: center
     flex-wrap: wrap
 
+.pagination
+    display: flex
+    justify-content: center
+    align-content: center
+    margin-bottom: 20px
+    gap: 20px
+    p
+        font-size: 1.5rem
+        font-family: $serifFont
+        cursor: pointer
+    .number
+        &:first-child
+            margin-left: 20px
+        &:last-child
+            margin-right: 20px
+    .clickable
+        color: $accentColor
+        &:hover
+            text-decoration: underline
+    .unClickable
+        color: $darkColor
+        text-decoration: none
+        font-weight: bold
+        font-size: 2rem
+        margin-top: 14px
+        box-shadow: 0px 15px 12px -5px rgba(0, 0, 0, 0.5)
+        padding: 5px 15px
+        background-color: $primaryColor
+        border-radius: 10px
+    .invisible
+        opacity: 0.3
+        cursor: unset
+
 .noResults
     padding: 5rem 25px 3.3rem 25px
     background-color: $darkColor
@@ -51,6 +84,9 @@
         font-size: 1.8rem
 
 @media only screen and (max-width: 754px)
+
+    .pagination
+        display: none
 
     .title
         font-size: 4rem
