--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -46,6 +46,7 @@
     display: flex
     justify-content: center
     align-content: center
+    margin-top: -20px
     margin-bottom: 20px
     gap: 20px
     p
