--- a/src/components/Pagination/Pagination.module.sass
+++ b/src/components/Pagination/Pagination.module.sass
@@ -22,8 +22,10 @@
     color: $accentColor
     &:hover
         text-decoration: underline
+        transform: scale(1.1)
+        transition: 0.8s
     
-.unClickable
+.selected
     color: $darkColor
     text-decoration: none
     font-weight: bold
@@ -36,7 +38,7 @@
     
 .invisible
     opacity: 0.3
-    cursor: unset
+    cursor: unset  !important
 
 @media only screen and (max-width: 754px)
 
