--- a/src/components/SearchBar/SearchBar.module.sass
+++ b/src/components/SearchBar/SearchBar.module.sass
@@ -3,7 +3,7 @@
 .search
     display: flex
     align-items: center
-    justify-content: space-between
+    justify-content: space-around
     background-color: $primaryColor
     width: min(450px, 80vw)
     margin: 0 auto
@@ -13,11 +13,13 @@
     background-color: $primaryColor
 
 .searchInput 
+    padding-top: 2px
     display: flex
     justify-content: center
     align-items: center
+    align-self: center
     flex-wrap: wrap
-    width: 60%
+    width: 40%
     background-color: $primaryColor
     background: none
     border: none
@@ -26,11 +28,14 @@
         outline: none
 
 .searchFilter
-    width: 30%
+    display: flex
+    justify-content: flex-end
+    align-content: center
+    gap: 5px
+    width: 50%
     background-color: $primaryColor
-    border: 2px solid gray
-    padding: 2px
-    font-size: 0.8rem
+    padding-top: 2px
+    font-size: 1rem
     border-radius: 5px
     &:focus
         outline: none
@@ -40,7 +45,26 @@
     height: 20px
     opacity: 0.3
 
+.x
+    margin: 1px 0 0 2px 
+    transform: scale(1, 0.75)
+    opacity: 0.7
+    cursor: pointer
+    &:hover
+        opacity: 1
+
 @media only screen and (max-width: 720px)
 
     .search
         flex: 0 1 auto
+
+    .searchInput
+        width: 45%
+
+    .searchFilter
+        justify-content: flex-end
+        width: 55%    
+        padding-top: 0px
+
+    .searchIcon, .x
+        display: none
