--- a/src/components/MoviePage/MoviePage.module.sass
+++ b/src/components/MoviePage/MoviePage.module.sass
@@ -18,7 +18,8 @@
     justify-content: center
     align-content: center
     background-color: $darkColor
-    padding: 20px 20px 20px 0
+    color: $primaryColor
+    padding: 30px 30px 30px 0px
 
 .poster img
     align-self: center
@@ -30,7 +31,7 @@
     justify-content: space-between
     align-content: flex-start
     flex-direction: column
-    padding: 20px
+    padding: 30px
     h4
         margin: 0 0 1rem 0
     h3
