--- a/src/components/MoviePage/MoviePage.module.sass
+++ b/src/components/MoviePage/MoviePage.module.sass
@@ -19,10 +19,10 @@
     align-content: center
     background-color: $darkColor
     color: $primaryColor
-    padding: 30px 30px 30px 0px
+    padding: 35px 35px 35px 0px
 
 .poster img
-    align-self: center
+    align-self: flex-start
     object-fit: none
     border-radius: 10px
 
@@ -31,7 +31,7 @@
     justify-content: space-between
     align-content: flex-start
     flex-direction: column
-    padding: 30px
+    padding: 35px
     h4
         margin: 0 0 1rem 0
     h3
@@ -49,13 +49,13 @@
         color: $accentColor
 
 .plot
-    padding: 10px
+    padding: 12px
     background: $primaryColor
     color: black
     opacity: 0.8
     border-radius: 10px
     p
-        -webkit-line-clamp: 2
+        -webkit-line-clamp: 3
         opacity: 1
         margin: 0
     h5
@@ -71,7 +71,7 @@
     -webkit-line-clamp: 1000 !important
     
 .buttons
-    margin-top: 0
+    margin-top: 20px
     display: flex
     justify-content: flex-start
     align-content: center
