--- a/src/components/SearchBar/SearchBar.module.sass
+++ b/src/components/SearchBar/SearchBar.module.sass
@@ -4,22 +4,23 @@
     display: flex
     align-items: center
     justify-content: space-around
+    gap: 5px
     background-color: $primaryColor
-    width: min(450px, 80vw)
+    width: min(600px, 80vw)
     margin: 0 auto
-    padding: 10px
+    padding: 10px 15px 10px 15px
     border-radius: 10px
     box-shadow: 0 0 5px #ffffff
     background-color: $primaryColor
 
 .searchInput 
+    flex: 1
     padding-top: 2px
     display: flex
     justify-content: center
     align-items: center
     align-self: center
     flex-wrap: wrap
-    width: 40%
     background-color: $primaryColor
     background: none
     border: none
@@ -29,10 +30,9 @@
 
 .searchFilter
     display: flex
-    justify-content: flex-end
+    justify-content: space-between
     align-content: center
     gap: 5px
-    width: 50%
     background-color: $primaryColor
     padding-top: 2px
     font-size: 1rem
@@ -52,6 +52,7 @@
     cursor: pointer
     &:hover
         opacity: 1
+        transform: scale(1.05, 0.8)
 
 @media only screen and (max-width: 720px)
 
@@ -59,12 +60,12 @@
         flex: 0 1 auto
 
     .searchInput
-        width: 45%
+        width: 40%
 
-    .searchFilter
-        justify-content: flex-end
-        width: 55%    
+    .searchFilter 
         padding-top: 0px
 
-    .searchIcon, .x
+@media only screen and (max-width: 480px)
+ 
+    .searchFilter
         display: none
