--- a/src/styles/App.module.sass
+++ b/src/styles/App.module.sass
@@ -72,3 +72,11 @@
 
     .skewed
         height: 340px
+
+@media only screen and (max-width: 480px) 
+
+    .title
+        padding: 0px
+
+    .searchAndToggle
+        padding: 0px
