--- a/src/styles/Index.module.sass
+++ b/src/styles/Index.module.sass
@@ -10,6 +10,7 @@ body
     -moz-osx-font-smoothing: grayscale
     background: $backgroundColor
     background-attachment: fixed
+    overflow-x: disable
 
 h1, h2, h3, svg
     font-family: $serifFont
