--- a/src/styles/Index.module.sass
+++ b/src/styles/Index.module.sass
@@ -1,9 +1,9 @@
 @import './variables'
-  
+
 body
     margin: 0
     padding: 0
-    min-height: 100vh
+    min-height: 100%
     box-sizing: border-box
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
     -webkit-font-smoothing: antialiased
@@ -30,8 +30,8 @@ h2, p
     -webkit-box-orient: vertical
 
 h4
-    margin-bottom: 20px 
+    margin-bottom: 20px
 
-code 
+code
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
 
