--- a/src/styles/Index.module.sass
+++ b/src/styles/Index.module.sass
@@ -3,7 +3,7 @@
 body
     margin: 0
     padding: 0
-    min-height: 100%
+    min-height: 100vh
     box-sizing: border-box
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
     -webkit-font-smoothing: antialiased
@@ -34,4 +34,10 @@ h4
 
 code
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
+
+@media only screen and (max-width: 849px)
+
+	body
+    	margin-top: constant(safe-area-inset-top)
+    	margin-top: env(safe-area-inset-top)
 
