--- a/src/styles/Index.module.sass
+++ b/src/styles/Index.module.sass
@@ -3,7 +3,7 @@
 body
     margin: 0
     padding: 0
-    min-height: calc(100% + 60px)
+    min-height: 100%
     box-sizing: border-box
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
     -webkit-font-smoothing: antialiased
@@ -35,3 +35,7 @@ h4
 code
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
 
+@media only screen and (max-width: 480px)
+
+    body
+        min-height: calc(100% + 60px)
