--- a/src/styles/Index.module.sass
+++ b/src/styles/Index.module.sass
@@ -35,3 +35,9 @@ h4
 code
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
 
+@media only screen and (max-width: 613px)
+
+    body
+        background: rgb(149, 137, 118)
+        background-attachment: scroll
+
